# ctorch

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: ctorch_cuda.cmake  ctorch_options.cmake  ctorch_test.cmake  ctorch_warnings.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  smoke_test.cpp
